Add home page styles with minimalist design and responsive layout

--- a/index.html
+++ b/index.html
@@ -14,115 +14,151 @@
     <div id="app">
       <header class="header">
         <div class="container">
-          <!-- Área de usuario (derecha) -->
-          <div id="header-user" class="header-user" style="display:none;">
-            <span class="user-greet">👋 Hola, <strong id="user-name"></strong></span>
-            <button id="header-logout" class="option-btn" style="padding:6px 12px; background:#ff6b6b;">Salir</button>
-          </div>
-          <div class="brand" style="display:flex;flex-direction:column;align-items:center;gap:8px;">
+          <!-- Logo y título -->
+          <div class="brand">
             <img src="/logo-rincon.png" alt="El Rincón Español" class="logo-img" onerror="this.style.display='none'" />
-            <h1 class="logo">El Rincón Español</h1>
+            <h1 class="logo">Español para Niños</h1>
           </div>
-          <p class="subtitle">¡Aprende Español Jugando!</p>
+
+          <!-- Navegación central -->
+          <nav class="header-nav">
+            <a href="#" class="header-nav-link">Para Padres</a>
+            <a href="#" class="header-nav-link">Ayuda</a>
+          </nav>
+
+          <!-- Área de usuario (derecha) -->
+          <div class="header-actions">
+            <div id="header-user" class="header-user" style="display:none;">
+              <span class="user-greet">👋 <strong id="user-name"></strong></span>
+              <button id="header-logout" class="header-logout-btn">Salir</button>
+            </div>
+            <div id="header-auth" class="header-auth">
+              <button id="auth-login" class="header-login-btn">Entrar</button>
+              <button id="auth-register" class="header-register-btn">Crear</button>
+            </div>
+          </div>
         </div>
       </header>
 
       <main class="main">
         <div class="container">
-          <section class="welcome-section">
-            <h2>¡Bienvenidos pequeños exploradores!</h2>
-            <p>Descubre el mundo del español a través de juegos divertidos</p>
-          </section>
-
-          <!-- Menu Principal -->
-          <section class="main-menu" id="main-menu">
-            <div class="menu-grid">
-              <div class="menu-card" data-section="videos">
-                <img src="/videos.png" alt="Videos" class="menu-icon-img" />
-                <h3 class="menu-title">Videos</h3>
-                <p class="menu-description">Aprende con videos educativos y divertidos</p>
+          <!-- Página principal (Hero + Menu) -->
+          <div id="home-page" class="page-view">
+            <section class="hero-section">
+              <div class="hero-content">
+                <h1 class="hero-title">¡Hola, amigo!</h1>
+                <p class="hero-subtitle">¡Vamos a aprender y jugar en español!</p>
+                <div class="hero-buttons">
+                  <button class="hero-btn-primary" data-section="games">Empezar a Aprender</button>
+                  <button class="hero-btn-secondary" data-section="games">Explorar Juegos</button>
+                </div>
               </div>
-              <div class="menu-card" data-section="games">
-                <img src="/juegos.png" alt="Juegos" class="menu-icon-img" />
-                <h3 class="menu-title">Juegos</h3>
-                <p class="menu-description">Practica palabras y amplía tu vocabulario</p>
+              <div class="hero-image">
+                <img src="/loro-mascota.png" alt="Loro mascota con auriculares y letras" onerror="this.src='https://lh3.googleusercontent.com/aida-public/AB6AXuBerYcoH3rljDtW13RWvsdOTiVAh6oHfke-wRO4JuATqBVGjKUoXtpwJY9IfK89bT6ERrfMgIqPJopNstez8GKSHVEfh-fZYQvNlx52nmal1dyhKRf840ngZ_EENMEAzTKLeNJ1qxw6vlQMepOmIk7Mk4DBUgC-N3DZbpbsEGS0Ffu5KtxI-rNNnarkvWTBLPr444TXZXcc-J8c2dLs-aGBM_B341DDX0B4tEBfeVQZyZoh-Q8g1ADo03jVmg1bDAk15YCxnGItLwo'">
               </div>
-              <div class="menu-card" data-section="vocabulario">
-                <img src="/vocabulario.png" alt="Vocabulario" class="menu-icon-img" />
-                <h3 class="menu-title">Vocabulario</h3>
-                <p class="menu-description">Teoría y listas para aprender nuevas palabras</p>
+            </section>
+
+            <!-- Menu Principal -->
+            <section class="main-menu" id="main-menu">
+              <h2 class="section-heading">Elige tu aventura</h2>
+              <div class="menu-grid">
+                <div class="menu-card" data-section="videos">
+                  <div class="menu-card-icon">🎬</div>
+                  <div class="menu-card-content">
+                    <h3 class="menu-card-title">Videos</h3>
+                    <p class="menu-card-description">Aprende con videos educativos</p>
+                  </div>
+                </div>
+                <div class="menu-card" data-section="games">
+                  <div class="menu-card-icon">🎮</div>
+                  <div class="menu-card-content">
+                    <h3 class="menu-card-title">Juegos</h3>
+                    <p class="menu-card-description">Practica con juegos divertidos</p>
+                  </div>
+                </div>
+                <div class="menu-card" data-section="vocabulario">
+                  <div class="menu-card-icon">📚</div>
+                  <div class="menu-card-content">
+                    <h3 class="menu-card-title">Vocabulario</h3>
+                    <p class="menu-card-description">Aprende nuevas palabras</p>
+                  </div>
+                </div>
+                <div class="menu-card" data-section="gramatica">
+                  <div class="menu-card-icon">🧠</div>
+                  <div class="menu-card-content">
+                    <h3 class="menu-card-title">Gramática</h3>
+                    <p class="menu-card-description">Reglas y ejemplos</p>
+                  </div>
+                </div>
               </div>
-              <div class="menu-card" data-section="gramatica">
-                <img src="/gramatica.png" alt="Gramática" class="menu-icon-img" />
-                <h3 class="menu-title">Gramática</h3>
-                <p class="menu-description">Reglas, ejemplos y trucos de gramática</p>
+            </section>
+          </div>
+
+          <!-- Página de Videos -->
+          <div id="videos-page" class="page-view hidden">
+            <section class="section-container" id="videos-section">
+              <div class="section-header">
+                <button class="back-btn" id="videos-back-btn">← Volver al Menú</button>
+                <h2 class="section-title">🎬 Videos Educativos</h2>
+                <div class="videos-search" style="margin-left:auto; display:flex; align-items:center; gap:8px;">
+                  <input id="videos-search" type="search" placeholder="Buscar videos..." aria-label="Buscar videos por título" />
+                  <button id="videos-admin-gear" class="option-btn" title="Administrar videos" style="padding:6px 10px;display:none;">⚙️</button>
+                </div>
               </div>
-            </div>
-          </section>
-
-          <!-- Sección Videos -->
-          <section class="section-container hidden" id="videos-section">
-            <div class="section-header">
-              <button class="back-btn" id="videos-back-btn">← Volver al Menú</button>
-              <h2 class="section-title">🎬 Videos Educativos</h2>
-              <div class="videos-search" style="margin-left:auto; display:flex; align-items:center; gap:8px;">
-                <input id="videos-search" type="search" placeholder="Buscar videos..." aria-label="Buscar videos por título" />
-                <button id="videos-admin-gear" class="option-btn" title="Administrar videos" style="padding:6px 10px;display:none;">⚙️</button>
+              <div class="videos-grid" id="videos-grid">
+                <!-- Videos se cargarán aquí -->
               </div>
-            </div>
-            <div class="videos-grid" id="videos-grid">
-              <!-- Videos se cargarán aquí -->
-            </div>
-          </section>
+            </section>
+          </div>
 
-          <!-- Sección Vocabulario (Teoría) -->
-          <section class="section-container hidden" id="vocabulario-section">
-            <div class="section-header">
-              <button class="back-btn" id="vocabulario-back-btn">← Volver al Menú</button>
-              <h2 class="section-title">📚 Teoría de Vocabulario</h2>
-              <button id="vocabulario-admin-gear" class="option-btn" title="Editar páginas de vocabulario" style="margin-left:auto;padding:6px 10px;display:none;">⚙️</button>
-            </div>
-            <div class="theory-grid" id="vocabulario-content">
-              <!-- Contenido teórico de vocabulario -->
-              <article class="theory-card">
-                <h4>Introducción</h4>
-                <p>Aprende nuevas palabras por temas y practica con ejemplos.</p>
-              </article>
-            </div>
-          </section>
-
-          <!-- Sección Gramática (Teoría) -->
-          <section class="section-container hidden" id="gramatica-section">
-            <div class="section-header">
-              <button class="back-btn" id="gramatica-back-btn">← Volver al Menú</button>
-              <h2 class="section-title">🧠 Gramática</h2>
-              <button id="gramatica-admin-gear" class="option-btn" title="Editar páginas de gramática" style="margin-left:auto;padding:6px 10px;display:none;">⚙️</button>
-            </div>
-            <div class="theory-grid" id="gramatica-content">
-              <!-- Contenido teórico de gramática -->
-              <article class="theory-card">
-                <h4>¿Qué es la gramática?</h4>
-                <p>Reglas y ejemplos para hablar y escribir mejor.</p>
-              </article>
-            </div>
-          </section>
-
-          
-
-          <!-- Sección Vocabulary -->
-          <section class="section-container hidden" id="vocabulary-section">
-            <div class="section-header">
-              <button class="back-btn" id="vocabulary-back-btn">← Volver al Menú</button>
-              <h2 class="section-title">🎮 Juegos</h2>
-              <div id="auth-box" style="margin-left:auto; display:flex; gap:8px; align-items:center;">
-                <button id="auth-login" class="option-btn" style="padding:6px 10px;">Entrar</button>
-                <button id="auth-register" class="option-btn" style="padding:6px 10px; background:#4ECDC4;">Crear</button>
+          <!-- Página de Vocabulario -->
+          <div id="vocabulario-page" class="page-view hidden">
+            <section class="section-container" id="vocabulario-section">
+              <div class="section-header">
+                <button class="back-btn" id="vocabulario-back-btn">← Volver al Menú</button>
+                <h2 class="section-title">📚 Teoría de Vocabulario</h2>
+                <button id="vocabulario-admin-gear" class="option-btn" title="Editar páginas de vocabulario" style="margin-left:auto;padding:6px 10px;display:none;">⚙️</button>
               </div>
-            </div>
-            <div class="games-grid" id="vocabulary-games-grid">
-              <!-- Juegos de vocabulario se cargarán aquí -->
-            </div>
-          </section>
+              <div class="theory-grid" id="vocabulario-content">
+                <!-- Contenido teórico de vocabulario -->
+                <article class="theory-card">
+                  <h4>Introducción</h4>
+                  <p>Aprende nuevas palabras por temas y practica con ejemplos.</p>
+                </article>
+              </div>
+            </section>
+          </div>
+
+          <!-- Página de Gramática -->
+          <div id="gramatica-page" class="page-view hidden">
+            <section class="section-container" id="gramatica-section">
+              <div class="section-header">
+                <button class="back-btn" id="gramatica-back-btn">← Volver al Menú</button>
+                <h2 class="section-title">🧠 Gramática</h2>
+                <button id="gramatica-admin-gear" class="option-btn" title="Editar páginas de gramática" style="margin-left:auto;padding:6px 10px;display:none;">⚙️</button>
+              </div>
+              <div class="theory-grid" id="gramatica-content">
+                <!-- Contenido teórico de gramática -->
+                <article class="theory-card">
+                  <h4>¿Qué es la gramática?</h4>
+                  <p>Reglas y ejemplos para hablar y escribir mejor.</p>
+                </article>
+              </div>
+            </section>
+          </div>
+
+          <!-- Página de Juegos -->
+          <div id="games-page" class="page-view hidden">
+            <section class="section-container" id="vocabulary-section">
+              <div class="section-header">
+                <button class="back-btn" id="vocabulary-back-btn">← Volver al Menú</button>
+                <h2 class="section-title">🎮 Juegos</h2>
+              </div>
+              <div class="games-grid" id="vocabulary-games-grid">
+                <!-- Juegos de vocabulario se cargarán aquí -->
+              </div>
+            </section>
+          </div>
 
 
           <!-- Contenedor del Juego -->
@@ -145,7 +181,11 @@
 
       <footer class="footer">
         <div class="container">
-          <p>&copy; 2025 El Rincón Español - Aprendiendo español con diversión</p>
+          <div class="footer-links">
+            <a href="#" class="footer-link">Términos de Servicio</a>
+            <a href="#" class="footer-link">Política de Privacidad</a>
+            <a href="#" class="footer-link">Contacto</a>
+          </div>
         </div>
       </footer>
     </div>
