Update videos UI and styling improvements

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <h1 class="videos-hero__title">Panel de Videos</h1>
                     <p class="videos-hero__subtitle">Mira y aprende con nuestros divertidos videos educativos.</p>
                   </div>
-                  <button class="videos-admin-toggle" id="videos-admin-toggle" style="display:none;" title="Gestión de videos">
+                  <button class="videos-admin-toggle" id="videos-admin-gear" title="Gestión de videos">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                       <path d="M10 6V14M6 10H14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
@@ -220,7 +220,7 @@
               <div class="section-header">
                 <button class="back-btn" id="vocabulario-back-btn">← Volver al Menú</button>
                 <h2 class="section-title">📚 Teoría de Vocabulario</h2>
-                <button id="vocabulario-admin-gear" class="option-btn" title="Editar páginas de vocabulario" style="margin-left:auto;padding:6px 10px;display:none;">⚙️</button>
+                <button id="vocabulario-admin-gear" class="option-btn" title="Editar páginas de vocabulario" style="margin-left:auto;padding:6px 10px;">⚙️</button>
               </div>
               <div class="theory-grid" id="vocabulario-content">
                 <!-- Contenido teórico de vocabulario -->
@@ -238,7 +238,7 @@
               <div class="section-header">
                 <button class="back-btn" id="gramatica-back-btn">← Volver al Menú</button>
                 <h2 class="section-title">🧠 Gramática</h2>
-                <button id="gramatica-admin-gear" class="option-btn" title="Editar páginas de gramática" style="margin-left:auto;padding:6px 10px;display:none;">⚙️</button>
+                <button id="gramatica-admin-gear" class="option-btn" title="Editar páginas de gramática" style="margin-left:auto;padding:6px 10px;">⚙️</button>
               </div>
               <div class="theory-grid" id="gramatica-content">
                 <!-- Contenido teórico de gramática -->
